[tool.poetry]
name = "render-post-deploy"
version = "0.1.0"
description = ""
authors = ["David Winter <i@djw.me>"]
readme = "README.md"
#packages = [{include = "render_post_deploy"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.3"
hypercorn = "^0.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
